Test conditional helper function

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
   "autoload": {
     "psr-4": {
       "Conditional\\": "src"
-    }
+    },
+    "files": [
+      "Helpers/helpers.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
