--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "php": ">=7.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "~8.0"
+    "phpunit/phpunit": "~8.0",
+    "symfony/var-dumper": "^6.4"
   },
   "autoload": {
     "psr-4": {
